# feishu-bot-sdk

./: .gitignore  CHANGELOG.md  README.md  README_EN.md  pyproject.toml
.github/workflows/: release.yml
docs/: README.md  README_EN.md  cli-command-mapping.md  cli-framework-decision.md  lark-cli-parity-plan.md  lark-cli-parity-report.md
docs/en/: 01-core-client.md  02-im.md  03-drive.md  04-bitable.md  05-docx-and-docs.md  06-wiki.md  07-events-webhook-ws.md  08-bot-server.md  09-types-errors-rate-limit.md  10-cli.md  11-calendar.md  12-contact.md  13-search.md  14-cloud-doc-workflows.md  15-mail.md  16-lark-cli-parity-domains.md
docs/zh/: 01-core-client.md  02-im.md  03-drive.md  04-bitable.md  05-docx-and-docs.md  06-wiki.md  07-events-webhook-ws.md  08-bot-server.md  09-types-errors-rate-limit.md  10-cli.md  11-calendar.md  12-contact.md  13-search.md  14-cloud-doc-workflows.md  15-mail.md  16-lark-cli-parity-domains.md
examples/: _settings.py  async_demo.py  bot_server_demo.py  card_callback.py  cardkit_streaming_demo.py  drive_demo.py  im_advanced_demo.py  im_media_demo.py  sync_demo.py  webhook_server.py  wiki_docs_demo.py  ws_listener.py
skills/feishu/: SKILL.md
src/feishu_bot_sdk/: __init__.py  bitable.py  bot.py  calendar.py  callbacks.py  cardkit.py  cli.py  config.py  contact.py  docs_content.py  docx.py  docx_blocks.py  docx_document.py  drive_acl.py  drive_files.py  drive_permissions.py  exceptions.py  feishu.py  http_client.py  minutes.py  task.py  (+8 more)
tools/: __init__.py  audit_lark_cli_parity.py  live_verify_shortcuts.py  sync_lark_cli_metadata.py
(+240 files in other folders)
